# bitloop-mandelbrot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h  build_config.h  compute.h  conversions.h  examples.h  experimental.h  gradient.h  history.hpp  mandel_field.h  mandel_process.cpp  mandel_process.hpp  mandel_state.cpp  mandel_state.h  mandel_stats.cpp  mandel_stats.h  mandel_tween.cpp  mandel_ui.cpp  shading.h  state.h  tween.cpp  tween.h  tween_splines.h  types.h
Mandelbrot/_unversioned/: experimental.hpp
Mandelbrot/config/: build_config.h  tween_splines.h
Mandelbrot/core/: compute.h  conversions.h  mandel_process.hpp  mandel_tween.cpp  types.h
Mandelbrot/field/: escape_field.h  normalization_field.h
Mandelbrot/kernels/: kernel_mandel.hpp  kernel_mandel_inertial.hpp  kernel_mandel_perturb.hpp  kernel_mandel_perturb_simd.hpp  kernel_mandel_perturb_simd_unrolled.hpp  kernel_newton.hpp  ref_orbit.hpp
Mandelbrot/shading/: multi_pass_shader.h  shading.h
Mandelbrot/state/: examples.h  mandel_state.cpp  mandel_state.h
Mandelbrot/stats/: mandel_stats.cpp  mandel_stats.h
Mandelbrot/ui/: history.hpp  mandel_ui.cpp
cmake/toolchain/: vcpkg_autodetect.cmake
subprojects/Cardioid/: CMakeLists.txt  vcpkg-configuration.json
subprojects/Cardioid/Cardioid/: Cardioid.cpp  Cardioid.h
subprojects/Cardioid/cmake/toolchain/: vcpkg_autodetect.cmake
subprojects/Cardioid/tooling/cmake/: findBitloop.cmake
subprojects/Cardioid/tooling/cmake/toolchain/: discovery_shims.cmake  merge_vcpkg_manifests.cmake  vcpkg_autodetect.cmake
tooling/cmake/toolchain/: discovery_toolchain.cmake
